Fix: CSS that was preventing horizontal scrolling.
Also fixes:  Prompt being cut off in activity feedback lightbox.
Also fixes:  Recovers some vertical space by grouping input fields into grid.

Story:

[#156548713]
https://www.pivotaltracker.com/n/projects/736901/stories/156548713

Rubric panel wont display all columns in narrow view

--- a/css/question.less
+++ b/css/question.less
@@ -51,7 +51,6 @@
   .prompt {
     font-weight: bold;
     margin-bottom: 0.5em;
-    max-width: 65vw;
     height: 8em;
     overflow: auto;
   }
